tests/semantic/invalid/struct_field_duplicate.src
struct Point {
    int x;
    int x;
}