tests/semantic/invalid/struct_field_duplicate.expected
semantic error at struct_field_duplicate.src:3:5: duplicate field 'x' in struct 'Point'